Linter silly